force-app/main/default/objects/Notification_Log__c/Notification_Log__c.object-meta.xml
<CustomObject>
    <description>ENS notification message log which track subscriber details from Marketing Cloud.</description>
    <label>Notification Log</label>
    <nameField>
        <displayFormat>NFL{0000000000}</displayFormat>
        <label>Notification Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>