force-app/main/default/objects/Notification_Log__c/fields/BO_Cars_Detail__c.field-meta.xml
<CustomField>
    <fullName>BO_Cars_Detail__c</fullName>
    <description>bad ordered cars detail table html string</description>
    <label>Bad Ordered Cars Detail</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>