force-app/main/default/objects/Notification_Log__c/fields/Bounce_Category__c.field-meta.xml
<CustomField>
    <fullName>Bounce_Category__c</fullName>
    <description>Type of bounced email captured by Marketing Cloud. If the email server rejects the email, the subscriber&#39;s status changes to Bounced.</description>
    <inlineHelpText>Tracking of Notification Bounce Category information from Marketing Cloud. If the email server rejects the email, the subscriber&#39;s status changes to Bounced.</inlineHelpText>
    <label>Bounce Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>