force-app/main/default/objects/Notification_Log__c/fields/Bounce_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Bounce_Subcategory__c</fullName>
    <description>Tracking of Notification Bounce Subcategory information from Marketing Cloud.</description>
    <inlineHelpText>Tracking of Notification Bounce Subcategory information from Marketing Cloud.</inlineHelpText>
    <label>Bounce Subcategory</label>
    <length>128</length>
    <type>Text</type>
</CustomField>