force-app/main/default/objects/Notification_Log__c/fields/Bounced_Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Bounced_Domain_Name__c</fullName>
    <description>Tracking of Notification Bounced Domain Name information from Marketing Cloud</description>
    <inlineHelpText>Tracking of Notification Bounced Domain Name information from Marketing Cloud</inlineHelpText>
    <label>Bounced Domain Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>