force-app/main/default/objects/Notification_Log__c/fields/Contact_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Display_Name__c</fullName>
    <description>notification subscriber display name</description>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>