force-app/main/default/objects/Notification_Log__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of ConnectNS contact who subscribed to a notification.</description>
    <inlineHelpText>Name of ConnectNS contact who subscribed to a notification.</inlineHelpText>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notification Logs</relationshipLabel>
    <relationshipName>Notifications_Captured</relationshipName>
    <type>Lookup</type>
</CustomField>