force-app/main/default/objects/Notification_Log__c/fields/Customer_Alert_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Alert_Name__c</fullName>
    <description>The name the subscriber gives to the subscription.</description>
    <inlineHelpText>The name the subscriber gives to the subscription.</inlineHelpText>
    <label>Customer Alert Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>