force-app/main/default/objects/Notification_Log__c/fields/Deliver_Now__c.field-meta.xml
<CustomField>
    <fullName>Deliver_Now__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deliver Now</label>
    <type>Checkbox</type>
</CustomField>