force-app/main/default/objects/Notification_Log__c/fields/Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status__c</fullName>
    <description>Status of notification delivery to the customer.</description>
    <inlineHelpText>Status of notification delivery to the customer.</inlineHelpText>
    <label>Delivery Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>