force-app/main/default/objects/Notification_Log__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email Snapshot</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>