force-app/main/default/objects/Notification_Log__c/fields/Email_Bounce_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Bounce_Type__c</fullName>
    <description>email delivery bounce type</description>
    <inlineHelpText>email delivery bounce type</inlineHelpText>
    <label>Email Bounce Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>