force-app/main/default/objects/Notification_Log__c/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <description>Identifies the recipients primary mail server.</description>
    <inlineHelpText>Identifies the recipients primary mail server.</inlineHelpText>
    <label>Email Domain</label>
    <length>128</length>
    <type>Text</type>
</CustomField>