force-app/main/default/objects/Notification_Log__c/fields/Email_isRead__c.field-meta.xml
<CustomField>
    <fullName>Email_isRead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email isRead</label>
    <type>Checkbox</type>
</CustomField>