force-app/main/default/objects/Notification_Log__c/fields/Email_isSent__c.field-meta.xml
<CustomField>
    <fullName>Email_isSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if email was successfully sent to subscriber.</description>
    <inlineHelpText>Checked if email was successfully sent to subscriber.</inlineHelpText>
    <label>Email isSent</label>
    <type>Checkbox</type>
</CustomField>