force-app/main/default/objects/Notification_Log__c/fields/Email_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Name__c</fullName>
    <description>Tracking of Notification Email fields  from Marketing Cloud.</description>
    <inlineHelpText>Tracking of Notification Email fields  from Marketing Cloud.</inlineHelpText>
    <label>Email Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>