force-app/main/default/objects/Notification_Log__c/fields/Email_Read_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Email_Read_Date_Time__c</fullName>
    <label>Email Read Date/Time</label>
    <type>DateTime</type>
</CustomField>