force-app/main/default/objects/Notification_Log__c/fields/Empty_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Empty_Indicator__c</fullName>
    <description>Load vs empty status indicator</description>
    <inlineHelpText>Load vs empty status indicator</inlineHelpText>
    <label>Empty Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>