force-app/main/default/objects/Notification_Log__c/fields/ENS_Message_Payload__c.field-meta.xml
<CustomField>
    <fullName>ENS_Message_Payload__c</fullName>
    <description>ENS notification message payload field content, unparsed</description>
    <label>ENS Message Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>