force-app/main/default/objects/Notification_Log__c/fields/ENS_Notification_Id__c.field-meta.xml
<CustomField>
    <fullName>ENS_Notification_Id__c</fullName>
    <description>NS ENS gateway auto generated number for each Notification Log.</description>
    <externalId>true</externalId>
    <inlineHelpText>NS ENS gateway auto generated number for each Notification Log.</inlineHelpText>
    <label>ENS Notification Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>