force-app/main/default/objects/Notification_Log__c/fields/Equipment_Number__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Number__c</fullName>
    <description>Car ID for No Bill notification</description>
    <inlineHelpText>The single equipment number that is impacted in the event</inlineHelpText>
    <label>Equipment Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>