force-app/main/default/objects/Notification_Log__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <description>Equipment type of the car impacted by the event</description>
    <inlineHelpText>Equipment type of the car impacted by the event</inlineHelpText>
    <label>Equipment Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>