force-app/main/default/objects/Notification_Log__c/fields/Est_Service_Window_From__c.field-meta.xml
<CustomField>
    <fullName>Est_Service_Window_From__c</fullName>
    <description>Train details captured from notification.</description>
    <inlineHelpText>Train details captured from notification.</inlineHelpText>
    <label>Est Service Window - From</label>
    <type>DateTime</type>
</CustomField>