force-app/main/default/objects/Notification_Log__c/fields/ETA_Car_Detail__c.field-meta.xml
<CustomField>
    <fullName>ETA_Car_Detail__c</fullName>
    <description>ETA change impacted car/equipment details</description>
    <inlineHelpText>ETA change impacted car/equipment details</inlineHelpText>
    <label>ETA Car Detail</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>