force-app/main/default/objects/Notification_Log__c/fields/Event_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Date_Time__c</fullName>
    <description>Date and Time and event was sent from Marketing Cloud.</description>
    <inlineHelpText>Date and Time and event was sent from Marketing Cloud.</inlineHelpText>
    <label>Event Date/Time</label>
    <type>DateTime</type>
</CustomField>