force-app/main/default/objects/Notification_Log__c/fields/Event_Description__c.field-meta.xml
<CustomField>
    <fullName>Event_Description__c</fullName>
    <description>Details related to event( notification).</description>
    <inlineHelpText>Details related to event( notification).</inlineHelpText>
    <label>Event Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>