force-app/main/default/objects/Notification_Log__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <description>The name the subscriber gives to the subscription.</description>
    <inlineHelpText>The name the subscriber gives to the subscription.</inlineHelpText>
    <label>Event Name</label>
    <length>160</length>
    <type>Text</type>
</CustomField>