force-app/main/default/objects/Notification_Log__c/fields/Event_Producer_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Producer_Name__c</fullName>
    <label>Event Producer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>