force-app/main/default/objects/Notification_Log__c/fields/Event_Reason__c.field-meta.xml
<CustomField>
    <fullName>Event_Reason__c</fullName>
    <description>event reason, for example for bar order event, the reason the car ID is bad ordered</description>
    <inlineHelpText>event reason, for example for bar order event, the reason the car ID is bad ordered</inlineHelpText>
    <label>Event Reason</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>