force-app/main/default/objects/Notification_Log__c/fields/Event_SubType__c.field-meta.xml
<CustomField>
    <fullName>Event_SubType__c</fullName>
    <description>Used for events with additional subtype to differentiate notification message content</description>
    <inlineHelpText>Used for events with additional subtype to differentiate notification message content</inlineHelpText>
    <label>Event SubType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>