force-app/main/default/objects/Notification_Log__c/fields/isInternalUser__c.field-meta.xml
<CustomField>
    <fullName>isInternalUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>whether the receiver is an internal norfolk southern employee</description>
    <label>is Internal User</label>
    <type>Checkbox</type>
</CustomField>