force-app/main/default/objects/Notification_Log__c/fields/isProcessed__c.field-meta.xml
<CustomField>
    <fullName>isProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a notification record has been processed.</description>
    <inlineHelpText>Indicates whether a notification record has been processed.</inlineHelpText>
    <label>isProcessed</label>
    <type>Checkbox</type>
</CustomField>