force-app/main/default/objects/Notification_Log__c/fields/Location_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Location_Account_Number__c</fullName>
    <description>notification event location&#39;s Norfolk level 10 account number</description>
    <inlineHelpText>notification event location&#39;s Norfolk level 10 account number</inlineHelpText>
    <label>Location Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>