force-app/main/default/objects/Notification_Log__c/fields/Location_City__c.field-meta.xml
<CustomField>
    <fullName>Location_City__c</fullName>
    <description>Bad Order notification field.</description>
    <label>Location City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>