force-app/main/default/objects/Notification_Log__c/fields/Location_ClassCode__c.field-meta.xml
<CustomField>
    <fullName>Location_ClassCode__c</fullName>
    <description>TYES location class code value</description>
    <inlineHelpText>TYES location class code value</inlineHelpText>
    <label>Location ClassCode</label>
    <length>30</length>
    <type>Text</type>
</CustomField>