force-app/main/default/objects/Notification_Log__c/fields/Location_State__c.field-meta.xml
<CustomField>
    <fullName>Location_State__c</fullName>
    <description>Bad Order notification field</description>
    <label>Location State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>