force-app/main/default/objects/Notification_Log__c/fields/LS_Place_Cars_Detail__c.field-meta.xml
<CustomField>
    <fullName>LS_Place_Cars_Detail__c</fullName>
    <description>local service planned placed cars detail table html string</description>
    <label>Place Cars Detail</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>