force-app/main/default/objects/Notification_Log__c/fields/LS_PlacedCars_Updated_Detail__c.field-meta.xml
<CustomField>
    <fullName>LS_PlacedCars_Updated_Detail__c</fullName>
    <label>LS Place Updated Car Details</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>