force-app/main/default/objects/Notification_Log__c/fields/LS_Pull_Cars_Detail__c.field-meta.xml
<CustomField>
    <fullName>LS_Pull_Cars_Detail__c</fullName>
    <description>local service planned pulled cars detail table html string</description>
    <label>Pull Cars Detail</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>