force-app/main/default/objects/Notification_Log__c/fields/Mobile_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Country_Code__c</fullName>
    <description>formula from contact mobile country code</description>
    <formula>TEXT(Contact_Name__r.et4ae5__Mobile_Country_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Country Code</label>
    <type>Text</type>
</CustomField>