force-app/main/default/objects/Notification_Log__c/fields/Notification_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email_Address__c</fullName>
    <label>Notification Email Address</label>
    <type>Email</type>
</CustomField>