force-app/main/default/objects/Notification_Log__c/fields/Notification_Message__c.field-meta.xml
<CustomField>
    <fullName>Notification_Message__c</fullName>
    <description>SMS/Push, message details populated by MC.</description>
    <inlineHelpText>SMS/Push, message details populated by MC.</inlineHelpText>
    <label>Notification Message</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>