force-app/main/default/objects/Notification_Log__c/fields/Notification_Push_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Notification_Push_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Box is checked if subscriber selects Push as a notification channel.</description>
    <inlineHelpText>Box is checked if subscriber selects Push as a notification channel.</inlineHelpText>
    <label>Push Enabled</label>
    <type>Checkbox</type>
</CustomField>