force-app/main/default/objects/Notification_Log__c/fields/Notification_SMS_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Notification_SMS_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Enabled</label>
    <type>Checkbox</type>
</CustomField>