force-app/main/default/objects/Notification_Log__c/fields/Open_Time__c.field-meta.xml
<CustomField>
    <fullName>Open_Time__c</fullName>
    <description>Tracking of Notification Open Time information from Marketing Cloud.</description>
    <inlineHelpText>Tracking of Notification Open Time information from Marketing Cloud.</inlineHelpText>
    <label>Open Time</label>
    <type>DateTime</type>
</CustomField>