force-app/main/default/objects/Notification_Log__c/fields/Overload_Cars_Detail__c.field-meta.xml
<CustomField>
    <fullName>Overload_Cars_Detail__c</fullName>
    <description>overload event impacted equipment/cars detail information</description>
    <inlineHelpText>overload event impacted equipment/cars detail information</inlineHelpText>
    <label>Overload Cars Detail</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>