force-app/main/default/objects/Notification_Log__c/fields/Push_Notified__c.field-meta.xml
<CustomField>
    <fullName>Push_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracking if Notification sent from Marketing Cloud was the Push channel type.</description>
    <inlineHelpText>Tracking if Notification sent from Marketing Cloud was the Push channel type.</inlineHelpText>
    <label>Push Notified</label>
    <type>Checkbox</type>
</CustomField>