force-app/main/default/objects/Notification_Log__c/fields/Push_Notified_Time__c.field-meta.xml
<CustomField>
    <fullName>Push_Notified_Time__c</fullName>
    <description>Tracks the Push  Notification Sent information from Marketing Cloud</description>
    <inlineHelpText>Tracks the Push  Notification Sent information from Marketing Cloud</inlineHelpText>
    <label>Push Notified Time</label>
    <type>DateTime</type>
</CustomField>