force-app/main/default/objects/Notification_Log__c/fields/RACF_Id__c.field-meta.xml
<CustomField>
    <fullName>RACF_Id__c</fullName>
    <description>subscriber NS RACF Id</description>
    <label>RACF Id</label>
    <length>5</length>
    <type>Text</type>
</CustomField>