force-app/main/default/objects/Notification_Log__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>notification message role field value</description>
    <label>Contact Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>