force-app/main/default/objects/Notification_Log__c/fields/Send_Time__c.field-meta.xml
<CustomField>
    <fullName>Send_Time__c</fullName>
    <description>Tracking of Notification Email Sent Time information from Marketing Cloud.</description>
    <inlineHelpText>Tracking of Notification Email Sent Time information from Marketing Cloud.</inlineHelpText>
    <label>Send Time</label>
    <type>DateTime</type>
</CustomField>