force-app/main/default/objects/Notification_Log__c/fields/SMS_isDelivered__c.field-meta.xml
<CustomField>
    <fullName>SMS_isDelivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS isDelivered</label>
    <type>Checkbox</type>
</CustomField>