force-app/main/default/objects/Notification_Log__c/fields/SMS_isSent__c.field-meta.xml
<CustomField>
    <fullName>SMS_isSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS isSent</label>
    <type>Checkbox</type>
</CustomField>