force-app/main/default/objects/Notification_Log__c/fields/SMS_isUndelivered__c.field-meta.xml
<CustomField>
    <fullName>SMS_isUndelivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS isUndelivered</label>
    <type>Checkbox</type>
</CustomField>