force-app/main/default/objects/Notification_Log__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Captures subject details from notification.</description>
    <inlineHelpText>Captures subject details from notification.</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>