force-app/main/default/objects/Notification_Log__c/fields/Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Id__c</fullName>
    <description>ens notification user subscription id</description>
    <label>Subscription Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>