force-app/main/default/objects/Notification_Log__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <description>The time a email was bounced captured from Marketing Cloud.</description>
    <inlineHelpText>The time a email was bounced captured from Marketing Cloud.</inlineHelpText>
    <label>Bounce Time</label>
    <type>DateTime</type>
</CustomField>