force-app/main/default/objects/Notification_Log__c/fields/Total_Cars_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Total_Cars_Impacted__c</fullName>
    <description>total number of cars (equipment) impacted in the event</description>
    <inlineHelpText>Total number of cars (equipment) impacted in the event</inlineHelpText>
    <label>Number of Cars Impacted</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>