force-app/main/default/objects/Notification_Log__c/fields/Total_Cars_to_Place__c.field-meta.xml
<CustomField>
    <fullName>Total_Cars_to_Place__c</fullName>
    <description>Number of cars to place from notification.</description>
    <inlineHelpText>Number of cars to place from notification.</inlineHelpText>
    <label>Total Cars to Place</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>