force-app/main/default/objects/Notification_Log__c/fields/Train_Departed_Time__c.field-meta.xml
<CustomField>
    <fullName>Train_Departed_Time__c</fullName>
    <description>What date and time did the Local Service In-Transit train depart.</description>
    <inlineHelpText>What date and time did the Local Service In-Transit train depa</inlineHelpText>
    <label>Train Departed Time</label>
    <type>DateTime</type>
</CustomField>