force-app/main/default/objects/Notification_Log__c/recordTypes/Notification_Log.recordType-meta.xml
<RecordType>
    <fullName>Notification_Log</fullName>
    <active>true</active>
    <description>enterprise notification system message log</description>
    <label>Notification Log</label>
</RecordType>