force-app/main/default/objects/Notification_Log__c/listViews/My_Notifications.listView-meta.xml
<ListView>
    <fullName>My_Notifications</fullName>
    <columns>NAME</columns>
    <columns>Contact_Name__c</columns>
    <columns>User__c</columns>
    <columns>RACF_Id__c</columns>
    <columns>Notification_Email_Address__c</columns>
    <columns>isProcessed__c</columns>
    <columns>Event_Name__c</columns>
    <columns>Event_Description__c</columns>
    <columns>Event_Date_Time__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Notifications</label>
</ListView>